Display submission counting

--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -40,7 +40,7 @@
     <div class="container" style="padding: 0 !important;">
     
         <h1>Xuất linh kiện thành phẩm <span style="font-size: 15px; float: right; margin-top: 15px;">Ngày thực nhập : 01/09/2018</span></h1>
-        <p class="clearfix" style="font-size: 15px; right: 0; margin-top: 5px;position: absolute;">Hợp đồng số : 555</p>
+        <p class="clearfix" id="stthopdong" style="font-size: 15px; right: 0; margin-top: 5px;position: absolute;"></p>
         <form style="margin-top: 15px;" id="save" action="" class="form-group">
             <div class="row">
                 <input type="hidden" id="submissionDate" value="not added yet">
@@ -108,6 +108,10 @@
         const {ipcRenderer} = require('electron'); //Now it's able to send events between backend and frontend 
         // Print recent submissions when first enter the page
         printReviews('linhkien', 'xuat');
+
+        //Print the number of submissions
+        var submissionCount = ipcRenderer.sendSync('countSubmissions');
+        document.getElementById('stthopdong').innerHTML = `Hợp đồng số : ${submissionCount}`;
         
         var thanhtien = document.getElementById('thanhtien').value;
         var formChange = document.querySelector('form')
