--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -41,7 +41,7 @@
     </nav>
     <div class="container" style="position: relative; padding: 0 !important;">
         <h1 style="margin-top: 50px;">Nhập linh kiện thành phẩm <span style="font-size: 15px; float: right; margin-top: 15px;">Ngày thực nhập : 01/09/2018</span></h1>
-        <p class="clearfix" style="font-size: 15px; right: 0; margin-top: 5px;position: absolute;">Hợp đồng số : 555</p>
+        <p class="clearfix" id="stthopdong" style="font-size: 15px; right: 0; margin-top: 5px;position: absolute;"></p>
         <form style="margin-top: 15px;" id="save" action="" class="form-group" onsubmit="return process()">
 
             <div class="row">
@@ -114,6 +114,10 @@
 
         // Print reviews when first enter the page
         printReviews('linhkien', 'nhap');
+
+        //Print the number of submissions
+        var submissionCount = ipcRenderer.sendSync('countSubmissions');
+        document.getElementById('stthopdong').innerHTML = `Hợp đồng số : ${submissionCount}`;
 
         var thanhtien = document.getElementById('thanhtien').value;
         var formChange = document.querySelector('form')
