--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -37,7 +37,7 @@
         </div>
 
     </nav>
-    <div class="container" style="padding: 0 !important;">
+    <div class="container" style="position: relative; padding: 0 !important;">
     
         <h1>Xuất linh kiện thành phẩm <span style="font-size: 15px; float: right; margin-top: 15px;">Ngày thực nhập : 01/09/2018</span></h1>
         <p class="clearfix" style="font-size: 15px; right: 0; margin-top: 5px;position: absolute;">Hợp đồng số : 555</p>
