--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -86,7 +86,7 @@
             </div>
         </form>
 
-        <div class="row" style="margin: 30px 0;">
+        <div id="buttonContainer" class="row" style="margin: 30px 0;">
             <input onclick="addReview('linhkien')" type="submit" value="Đợi" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
             <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
@@ -94,7 +94,7 @@
         <div id="grid">
 
         </div>
-        <input onclick="submit()" type="submit" value="Thêm" class="form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
+        <input id="button2" onclick="submit()" type="submit" value="Thêm" class="form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
             
     </div>
 
@@ -126,7 +126,6 @@
             // document.getElementById('thanhtien').placeholder = document.getElementById('dongia').value *document.getElementById('quantity').value
             document.getElementById('thanhtien').placeholder = thanhtien;
         })
-
 
         function prepareObj() {
             var tenhang = document.getElementById('tenhang').value;
@@ -211,6 +210,18 @@
                 </div>
             `)
             form.append(formContent);
+
+            //Change buttons too
+            const buttonContainer = $('#buttonContainer');
+            buttonContainer.empty();
+            buttonContainer.append(`
+                <input onclick="submit()" type="submit" value="Thêm" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
+                <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
+            `)
+
+            //Hidden excel table and submit button
+            document.getElementById('grid').style.display = 'none';
+            document.getElementById('button2').style.display = 'none';
 
             thanhtien = doc.thanhtien.toString();
         })
