--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -84,15 +84,15 @@
             </div>
         </form>
 
-        <div class="row" style="margin: 30px 0;">
-            <input  id="realSubmitBtn" onclick="addReview('linhkien')" type="submit" value="Đợi" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
+        <div class="row" id="buttonContainer" style="margin: 30px 0;">
+            <input onclick="addReview('linhkien')" type="submit" value="Đợi" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
             <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
 
         <div id="grid">
             
         </div>
-        <input onclick="submit()" type="submit" value="Thêm" class="form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
+        <input id="button2" onclick="submit()" type="submit" value="Thêm" class="form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
       
     </div>
 
@@ -206,10 +206,19 @@
             `)
             form.append(formContent);
 
+            //Change buttons too
+            const buttonContainer = $('#buttonContainer');
+            buttonContainer.empty();
+            buttonContainer.append(`
+                <input onclick="submit()" type="submit" value="Thêm" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
+                <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
+            `)
+
+            //Hidden excel table and submit button
+            document.getElementById('grid').style.display = 'none';
+            document.getElementById('button2').style.display = 'none';
+
             thanhtien = doc.thanhtien.toString();
-
-
-
         })
 
         function submit() {
