--- a/src/chinhsua/cslk.html
+++ b/src/chinhsua/cslk.html
@@ -71,6 +71,19 @@
             <div class="row" style="margin-top: 50px;">
                 <div id="nhap" class="col-6" style="border-right: 1px black solid;">
                     <h3 style="text-align: center;">Nhập</h3>
+
+                    <div style="max-width: 80%; margin-left: auto; margin-right: auto; display: flex; border-bottom: 1px solid rgb(121, 120, 120, 0.5); padding-bottom: 10px;">
+                        <div style="align-self: flex-start;">
+                            <h5 style="font-size: 25px;">
+                                Phiếu nhập số: 5
+                            </h5>
+                            <p style="font-size: 15px;">Ngày nhập: 05/09/2021</p>
+                        </div>
+                        <div style="margin-left: auto; margin-right: 0; margin-top: 15px;">
+                            <button onclick="redirect2('${doc.id}')" style="background-color: transparent;"><i style="font-size:20px;" class="far fa-edit"></i></button>                
+                            <button onclick="redirect3('${doc.id}')" style="background-color: transparent;"><i style="font-size:20px; margin: 0 !important;" class="far fa-trash-alt"></i></button>
+                        </div>
+                    </div>
                 </div>
                 <div id="xuat" class="col-6">
                     <h3 style="text-align: center;">Xuất</h3>
