--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -40,8 +40,14 @@
 
     </nav>
     <div class="container" style="position: relative; padding: 0 !important;">
-        <h1 style="margin-top: 50px;">Nhập linh kiện thành phẩm <span id="datetime" style="font-size: 15px; float: right; margin-top: 15px;">Ngày thực nhập : 01/09/2018</span></h1>
-        <p class="clearfix" id="stthopdong" style="font-size: 15px; right: 0; margin-top: 5px;position: absolute;">Phiếu nhập số :</p>
+    
+        <div style="display: flex; margin-top: 50px;">
+            <h1>Nhập linh kiện thành phẩm</h1> 
+            <div style="margin-right: 0; margin-left: auto;"> 
+                <span id="datetime" style="float: right; margin-right: 0; margin-left: auto; font-size: 15px; margin-top: 15px;">Ngày thực nhập: 01/09/2018</span>
+                <p class="clearfix" style="font-size: 15px; margin-right: 0; margin-left: auto; margin-top: 5px;">Phiếu nhập số: <span id="stthopdong">55555</span></p>
+            </div>
+        </div>
         <form style="margin-top: 15px;" id="save" action="" class="form-group" onsubmit="return process()">
 
             <div class="row">
@@ -90,14 +96,14 @@
         </form>
 
         <div id="buttonContainer" class="row" style="margin: 30px 0;">
-            <input onclick="addReview('linhkien')" type="submit" value="Đợi" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
+            <input onclick="addReview('linhkien')" type="submit" value="Nhập" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
             <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
 
         <div id="grid">
 
         </div>
-        <input id="button2" onclick="submit()" type="submit" value="Thêm" class="form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
+        <input id="button2" onclick="submit()" type="submit" value="Lưu" class="form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
             
     </div>
 
@@ -264,6 +270,22 @@
         function setTwoNumberDecimal(event) {
             this.value = parseFloat(this.value).toFixed(2);
         }
+
+        $(document).on("dblclick", "#stthopdong", function()
+        {
+
+            var current = $(this).text();
+            $("#stthopdong").html('<textarea class="form-control" id="newcont" rows="2">'+current+'</textarea>');
+            $("#newcont").focus();
+
+            $("#newcont").focus(function() {
+                console.log('in');
+            }).blur(function() {
+                var newcont = $("#newcont").val();
+                $("#stthopdong").text(newcont);
+            });
+
+        })
 
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
