--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -85,14 +85,14 @@
         </form>
 
         <div class="row" id="buttonContainer" style="margin: 30px 0;">
-            <input onclick="addReview('linhkien')" type="submit" value="Đợi" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
+            <input onclick="addReview('linhkien')" type="submit" value="Nhập" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
             <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
 
         <div id="grid">
             
         </div>
-        <input id="button2" onclick="submit()" type="submit" value="Thêm" class="form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
+        <input id="button2" onclick="submit()" type="submit" value="Lưu" class="form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
       
     </div>
 
