--- a/src/index.html
+++ b/src/index.html
@@ -98,8 +98,10 @@
         // Via localStorage
         if (localStorage.reviews == undefined) 
             localStorage.reviews = JSON.stringify({ //Initializing localStorage object is more complex than usual
-                linhkien: [],
-                thanhpham: []
+                nhapLinhkien: [],
+                xuatLinhkien: [],
+                nhapThanhpham: [],
+                xuatThanhpham: []
             })
     </script>
 </body>
