--- a/src/nhap/tpnhap.html
+++ b/src/nhap/tpnhap.html
@@ -39,9 +39,8 @@
     </nav>
     <div class="container">
     
-        <h1>Nhập thành phẩm <span style="font-size: 15px; float: right; margin-top: 15px;">Ngày thực nhập : 01/09/2018</span></h1>
+        <h1>Nhập thành phẩm <span style="font-size: 15px; float: right; margin-top: 15px;">Ngày thực nhập: <span id="datetime"></span></span></h1>
         <form id="save" action="" class="form-group">
-            <input type="hidden" id="submissionDate" value="not added yet">
             <input type="hidden" id="partnum">
 
             <label for="tensp">Tên sản phẩm</label>
@@ -66,7 +65,7 @@
 
         <div class="row" id="buttonContainer" style="margin: 30px 0;">
             <input onclick="submit()" type="submit" value="Thêm" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
-            <input onclick="addReview('thanhpham')" type="submit" value="Đợi" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
+            <input onclick="addReview('nhapThanhpham')" type="submit" value="Đợi" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
             <button class="col-4 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
 
@@ -88,7 +87,11 @@
         const {ipcRenderer} = require('electron'); //Now it's able to send events between backend and frontend 
 
         // Print reviews when first enter the page
-        printReviews('thanhpham', 'nhap');
+        printReviews('nhapThanhpham');
+
+        // Update the date today
+        var dt = new Date();
+        document.getElementById("datetime").innerHTML = (("0"+dt.getDate()).slice(-2)) +"/"+ (("0"+(dt.getMonth()+1)).slice(-2)) +"/"+ (dt.getFullYear());
 
         function prepareObj() {
             var tenhang = document.getElementById('tenhang').value;
@@ -98,10 +101,9 @@
             var chip = document.getElementById('chip').value;
             var date = document.getElementById('date').value;
             var quantity = document.getElementById('quantity').value;
-            var submissionDate = document.getElementById('submissionDate').value;
+            var submissionDate = document.getElementById('datetime').innerHTML;
 
             if (quantity == "") quantity = "0";
-            if (submissionDate == "not added yet") submissionDate = new Date().toDateString();
 
             const obj = {
                 tenhang: tenhang,
@@ -120,12 +122,13 @@
 
         // Edit document also ////////////////////
         ipcRenderer.on('edit-receive', (event, doc) => {
+            document.getElementById('datetime').innerHTML = doc.submissionDate;
+
             const form = $('form');
             form.empty();
             form.attr("id", 'edit')
             const formContent = $(`
                 <input type="hidden" id="_id" value="${doc.id}">
-                <input type="hidden" id="submissionDate" value="${doc.submissionDate}">
                 <input type="hidden" id="partnum" value="${doc.partnum}">
 
                 <label for="tensp">Tên sản phẩm</label>
@@ -165,12 +168,9 @@
             if (form.id == "save") {
                 //Submit all previous reviews
                 var index = 0;
-                while (index < reviews['thanhpham'].length) { //Inside the array
-                    if (reviews['thanhpham'][index].state == 'nhap') {
-                        var canSubmit = ipcRenderer.sendSync('save-thanhpham', reviews['thanhpham'][index]);
-                        if (canSubmit) removeReview('thanhpham', index);
-                        else index++; //Skip element
-                    }
+                while (index < reviews['nhapThanhpham'].length) { //Inside the array
+                    var canSubmit = ipcRenderer.sendSync('save-thanhpham', reviews['nhapThanhpham'][index]);
+                    if (canSubmit) removeReview('nhapThanhpham', index);
                     else index++; //Skip element
                 }
 
