--- a/src/addExcel/addExcel.html
+++ b/src/addExcel/addExcel.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-light" style="padding: 0 !important;">
         
-        <a class="navbar-brand" href="#" style="font-weight: 400;">Dư Thịnh</a>
+        <a class="navbar-brand" href="../index.html" style="font-weight: 400;">Back</a>
             
         <div class="nav-icon">
             <a class="nav-link" href="../index.html">Home</a>
